# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  spec.yaml  sqlx-data.json
configuration/: base.yaml  production.yaml
migrations/: 20221024162303_create_subscriptions_table.sql  20221105183039_add_status_to_subscriptions.sql  20221105184114_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
