[package]
authors = ["Erick Machado <erick.gsmachado@gmail.com>"]
edition = "2021"
name = "zero2prod"
version = "0.0.1"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dev-dependencies]
once_cell = "1"
reqwest = "0.11"

[dependencies]
actix-web = "4"
chrono = { default-features = false, features = ["clock"], version = "0.4.22" }
config = "0.13"
secrecy = { features = ["serde"], version = "0.8" }
serde = { features = ["derive"], version = "1" }
tracing = { features = ["log"], version = "0.1" }
tracing-actix-web = "0.6"
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { features = ["registry", "env-filter"], version = "0.3" }
tokio = { features = ["macros", "rt-multi-thread"], version = "1" }
uuid = { features = ["v4"], version = "1" }

[dependencies.sqlx]
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]
version = "0.6"

[lib]
path = "src/lib.rs"
