[package]
authors = ["Erick Machado <erick.gsmachado@gmail.com>"]
edition = "2021"
name = "zero2prod"
version = "0.0.1"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dev-dependencies]
claim = "0.5"
fake = "~2.3"
linkify = "0.8"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
once_cell = "1"
serde_json = "1"
wiremock = "0.5"

[dependencies]
actix-web = "4"
anyhow = "1"
base64 = "0.13"
chrono = { default-features = false, features = ["clock"], version = "0.4.22" }
config = "0.13"
rand = { features = ["std_rng"], version = "0.8" }
secrecy = { features = ["serde"], version = "0.8" }
serde = { features = ["derive"], version = "1" }
serde-aux = "3"
tracing = { features = ["log"], version = "0.1" }
tracing-actix-web = "0.6"
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { features = ["registry", "env-filter"], version = "0.3" }
thiserror = "1"
tokio = { features = ["rt", "macros"], version = "1" }
uuid = { features = ["v4"], version = "1" }
unicode-segmentation = "1"
validator = "0.14"

[dependencies.sqlx]
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]
version = "0.6"

[dependencies.reqwest]
default-features = false
features = ["json", "rustls-tls"]
version = "0.11"

[lib]
path = "src/lib.rs"
